--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "eslint-plugin-svelte": "^3.13.0",
     "prettier": "^3.7.3",
     "svelte": "^5.45.2",
+    "svelte-check": "^4.3.4",
     "svelte-eslint-parser": "^1.4.0",
     "typescript": "^5.9.3",
     "typescript-eslint": "^8.48.0",
